# lazypaper

./: .gitignore  README.md  config.py  emailer.py  fetcher.py  main.py  pyproject.toml  requirements.txt  scorer.py  sent_articles.json  sent_emails.db  user_resend_api_Key.example
.github/workflows/: daily_email.yml  pytest.yml  test_paper_email.yml
scripts/: bootstrap.sh  check_domains.py  extract_cron.py  migrate_sent_json_to_pg.py  schema_sent_postgres.sql  sync_workflow_cron.py  validate_bootstrap.py
src/lazypaper/: __init__.py  __main__.py  cfg.py  emailer.py  fetcher.py  local_env.py  main.py  scorer.py  sent_store.py
tests/: test_bootstrap_helpers.py  test_fetcher.py  test_local_env.py  test_pipeline.py  test_scorer.py  test_sent_store.py  test_sources.py
